added calendar to navbar

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="container" id = "home_container">
   <div class="row">
-    <div class="logo text-center">
+    <div class="logo centered">
         <%= image_tag "logo_name", size: "205x160", class: "" %>
     </div>
     <div class="catchline text-center">
