--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -130,3 +130,9 @@
   border-left: 1px solid #E6E6E6;
   border-top: 1px solid #E6E6E6;
 }
+#user_calendar{
+  font-size: 27px;
+  padding-left: 20px;
+  padding-right: 10px;
+  color : $blue;
+}
