--- a/app/views/booking/_form.html.erb
+++ b/app/views/booking/_form.html.erb
@@ -5,7 +5,7 @@
         <h2>Information</h2>
         <p>Ajouter des informations vous concernant pour permettre à votre interlocuteur de mieux vous connaître.</p>
       </div>
-        <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= simple_form_for(@user) do |f| %>
           <%= f.error_notification %>
 
           <div class="form-inputs">
@@ -16,7 +16,7 @@
           </div>
 
           <div class="form-actions text-center">
-            <%= f.button :submit, "Complete", :class => 'btn btn-primary', style: "width: 100%;" %>
+            <%= f.button :submit, "Complete", method: :patch, :class => 'btn btn-primary', style: "width: 100%;" %>
           </div>
 
         <% end %>
