--- a/app/assets/stylesheets/pages/_search.scss
+++ b/app/assets/stylesheets/pages/_search.scss
@@ -37,6 +37,10 @@
   margin: 5px;
   font-size: 14px;
   outline: none;
+  background-color: white;
+}
+.select-height {
+  height: 40px;
 }
 .full-input {
   width: 100%;
