Cards design, first icons

--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -151,7 +151,9 @@
                         <h6><%= user.address %></h6>
                       </div>
                       <div class="card-content-right">
-
+                        <i class="fa fa-home"> Conventionné Secteur</i><br>
+                        <i class="fa fa-home"> Hébergement</i><br>
+                        <i class="fa fa-phone"> Secrétariat</i>
                       </div>
                     </div>
                   <% end %>
