--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -18,7 +18,9 @@
   flex: 1 1 auto;
 }
 .card-content-right {
-  flex: 0 0 25%;
+  flex: 0 0 35%;
+  color: #888;
+  font-size: 14px;
 }
 .fa-yellow {
   color: $yellow;
