delete range implemented

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,7 +17,7 @@
       </form>
     </div>
 
-    <%= link_to calendar_path(current_user), class: "navbar-wagon-item navbar-wagon-link" do %>
+    <%= link_to calendar_path, class: "navbar-wagon-item navbar-wagon-link" do %>
       <div id="user_calendar">
         <i class="fa fa-calendar"></i>
       </div>
