--- a/app/assets/stylesheets/layout/_form.scss
+++ b/app/assets/stylesheets/layout/_form.scss
@@ -44,9 +44,18 @@
 .background {
       background-color: rgb(250, 250, 250);
 }
-#form_title {
+#form_title h2 {
   padding-bottom: 25px;
   letter-spacing: 20px;
   font-family: 'Raleway', sans-serif;
   font-weight: lighter;
+}
+#form_title p {
+  letter-spacing: 2px;
+  text-align: justify;
+  padding-bottom: 10px;
+  font-size: 17px;
+}
+#form-inputs {
+  text-align: left;
 }
