--- a/app/assets/stylesheets/pages/_calendar.scss
+++ b/app/assets/stylesheets/pages/_calendar.scss
@@ -5,3 +5,17 @@
   padding-top: 20px;
   padding-bottom: 70px;
 }
+.demands{
+  width: 100%;
+   margin-left: auto;
+   margin-right: auto;
+   max-width: initial;
+  background: #F9F9FA;
+  border-top: 1px solid #EAEAEB;
+  border-bottom: 1px solid #EAEAEB;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  bottom: 0;
+  color : $gray;
+  font-size: 12px;
+}
