--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -11,22 +11,34 @@
       <% end -%>
     </div>
 
-    <% @slot_ranges.each do |range| %>
-      <ul class="list-unstyled">
-        <li><%= human_slot_range(range) %></li>
-        <li><%= link_to "Supprimer", slot_range_path(slot_range_id(range)), method: :delete, data: { confirm: "Etes-vous sûr(e) ?" } %></li>
-      </ul>
-    <% end %>
-
-
-<!-- @slot.range est un objet >> un tableau de hashs
-=> #<PG::Result:0x007fc9f842b480 status=PGRES_TUPLES_OK ntuples=2 nfields=2 cmd_tuples=2>
-[17] pry(main)> r.each { |rr| p rr }
-{"min"=>"2016-02-25", "max"=>"2016-03-09"}
-{"min"=>"2016-09-10", "max"=>"2016-09-11"} -->
-
   </div>
 </div>
+
+<div class="demands">
+  <div class="container">
+    <div class="row-fluid">
+      <div class="availabilities text-center col-sm-12 col-md-6">
+      <h4>Mes recherches de remplacants</h4>
+      <% if @slot_ranges.ntuples == 0 %>
+         <div class="empty_availabilities"><i class="fa fa-calendar-times-o"><br></i>Vous n'avez pas encore de plages de recherches <br> Veuillez remplir votre calendrier ci-dessus et valider vos plages</div>
+      <% else %>
+          <% @slot_ranges.each do |range| %>
+            <ul class="list-unstyled list-inline">
+              <li><%= human_slot_range(range) %></li>
+              <li><%= link_to "Supprimer", slot_range_path(slot_range_id(range)), method: :delete, data: { confirm: "Etes-vous sûr(e) ?" } %></li>
+            </ul>
+          <% end %>
+      <% end %>
+      </div>
+      <div class="incoming_demands text-center col-sm-12 col-md-6">
+          <h4>Mes demandes de remplacants en cours</h4>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
 
 
 
