--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -38,19 +38,19 @@
         </div>
         <div class="col-xs-6 col-md-3">
           <div class="card">
-            <%= image_tag "doctor2", size: "100", class: "" %>
+            <%= image_tag "doctor2.svg", size: "100", class: "" %>
             <h5><strong>2.</strong> Choisissez le cabinet ou le remplacant qui vous convient</h5>
           </div>
         </div>
         <div class="col-xs-6 col-md-3">
           <div class="card">
-            <%= image_tag "switch2", size: "100", class: "" %>
+            <%= image_tag "switch2.svg", size: "100", class: "" %>
             <h5><strong>3.</strong> Échangez aisément depuis la plateforme</h5>
           </div>
         </div>
         <div class="col-xs-6 col-md-3">
           <div class="card">
-            <%= image_tag "stethoscope2", size: "100", class: "" %>
+            <%= image_tag "stethoscope2.svg", size: "100", class: "" %>
             <h5><strong>4.</strong> Donner votre feedback à la fin de la prestation</h5>
           </div>
         </div>
