--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -13,9 +13,9 @@
               <div class="row-fluid">
                 <div class="col-xs-12">
                   <select class="search-input select-height full-input" placeholder="Spécialité" name="speciality">
-                    <option class="search-input" value="generalist">Médecine générale</option>
-                    <option class="search-input" value="kine">Kinésithérapie</option>
-                    <option class="search-input" value="specialist">Autre spécialité</option>
+                    <option class="search-input" value="Médecine générale">Médecine générale</option>
+                    <option class="search-input" value="Kinésithérapie">Kinésithérapie</option>
+                    <option class="search-input" value="Autre spécialité">Autre spécialité</option>
                   </select>
                 </div>
               </div>
@@ -58,7 +58,7 @@
                     </div>
                     <div class="slider-margin"></div>
                     <div class="slider-addon checkbox hidden-xs">
-                      <label><input type="checkbox" name="unrated" value="on" checked> Inclure les profils non-notés</label>
+                      <label><input type="checkbox" name="unrated" value="true" checked> Inclure les profils non-notés</label>
                     </div>
                   </div>
                 </div>
@@ -90,7 +90,7 @@
                     <div class="label-option-large">
                       <div class="form-group">
                         <label>Visites à domicile </label>
-                        <select name="home-visits" class="search-input">
+                        <select name="house_visits" class="search-input">
                           <option value="none">Aucune</option>
                           <option value="max2"><= 2 par jour</option>
                           <option value="above2">> 2 par jour</option>
