--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -36,5 +36,6 @@ $green: #26B35E;
 $gray-darker:  lighten(#000, 13.5%); // #222
 $gray-dark:    lighten(#000, 20%);   // #333
 $gray:         lighten(#000, 33.5%); // #555
-$gray-light:   lighten(#000, 46.7%); // #777
+$gray-medium:  lighten(#000, 60%); // Customed
+$gray-light:   lighten(#000, 80%); // Customed
 $gray-lighter: lighten(#000, 93.5%); // #eee
