--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -1,3 +1,7 @@
+<div id="title" class="text-center">
+  <h3>Mon calendrier de recherches de remplacants</h3>
+</div>
+
 <div id="demo"></div>
 
 <div class="container">
