Research working - to be tested - except dates

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,8 +10,8 @@
       <form action="/search" class="form-inline text-center">
         <label class="" for="formGroupInputSmall">Je recherche</label>
         <select class="form-control" placeholder="..." name="has_practice">
-          <option value="true">un remplaçant</option>
-          <option value="false">un remplacement</option>
+          <option value="false">un remplaçant</option>
+          <option value="true">un remplacement</option>
         </select>
         <label for="formGroupInputSmall">à</label>
         <input type="text" class="form-control" placeholder="Lyon" name="location" id="user_input_autocomplete_address">
