--- a/app/assets/stylesheets/components/_avatars.scss
+++ b/app/assets/stylesheets/components/_avatars.scss
@@ -10,6 +10,12 @@
   width: 80px;
   border-radius: 50%;
 }
+.avatar-superextralarge {
+  width: 100px;
+  border-radius: 50%;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+  border: white 1px solid;
+}
 .avatar-larger {
   width: 90px;
   border-radius: 50%;
