--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -90,6 +90,17 @@
     <div class="col-md-6">
       <div class="card-map">
         <h2>Map</h2>
+          <script type="text/javascript">
+            <% content_for(:after_js) do %>
+              <%= javascript_tag do %>
+                $(document).ready(function() {
+                  var coord = <%= raw @user_coordinates %>;
+                  alert('user coordinates are ' + coord.lat + ', ' + coord.lng);
+                });
+              <% end %>
+            <% end %>
+          </script>
+        </div>
       </div>
     </div>
   </div>
