--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -90,12 +90,16 @@
     <div class="col-md-6">
       <div class="card-map">
         <h2>Map</h2>
+          <div id="map" style="width: 100%; height: 600px;"></div>
           <script type="text/javascript">
             <% content_for(:after_js) do %>
               <%= javascript_tag do %>
                 $(document).ready(function() {
-                  var coord = <%= raw @user_coordinates %>;
-                  alert('user coordinates are ' + coord.lat + ', ' + coord.lng);
+                  handler = Gmaps.build('Google');
+                  handler.buildMap({ internal: { id: 'map' } }, function(){
+                    markers = handler.addMarkers(<%= raw @markers.to_json %>);
+                    handler.bounds.extendWith(markers);
+                    handler.fitMapToBounds();
                 });
               <% end %>
             <% end %>
