fixed logo issue on home page

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -7,9 +7,12 @@
   // background-image : url(/assets/white-bg.jpg);
   // background-size: cover;
 }
-.logo {
+.main_logo {
   margin-top: 70px;
   margin-bottom: 50px;
+  display: block;
+   width: auto;
+   margin: auto;
 }
 .catchline {
   margin-bottom: 70px;
