--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="container" id = "home_container">
   <div class="row">
-    <div class="logo centered">
-        <%= image_tag "logo_name.png", size: "205x160", class: "" %>
+    <div class="main_logo text-center">
+        <%= image_tag "logo_name.gif", size: "200x200"%>
     </div>
     <div class="catchline text-center">
       <h3>Et le replacement entre médecins n'est plus un souci</h3>
