--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -55,7 +55,7 @@ hr {
   border-radius: 7px;
   width: 190px;
   height: 200px;
-  border: 1px solid rgba(0, 0, 0, 0.1);
+  // border: 1px solid rgba(0, 0, 0, 0.1);
   img {
     margin-top: 10px;
   }
