--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,14 +8,17 @@
   <div class="navbar-wagon-right">
 
     <!-- Search form -->
-    <div id="search-div-navbar" class="hidden-xs">
-      <form action="/search" class="navbar-wagon-search">
-        <input type="text" class="navbar-wagon-search-input" name="location" id="user_input_autocomplete_address_navbar" placeholder="Ville ou adresse">
-        <button type="submit" class="navbar-wagon-search-btn">
-          <i class="fa fa-search"></i>
-        </button>
-      </form>
-    </div>
+    <% if current_user %>
+      <div id="search-div-navbar" class="hidden-xs">
+        <form action="/search" class="navbar-wagon-search">
+          <input type="text" class="navbar-wagon-search-input" name="location" id="user_input_autocomplete_address_navbar" placeholder="Ville ou adresse">
+          <input type="hidden" name="has_practice" value="<%= current_user.has_practice %>">
+          <button type="submit" class="navbar-wagon-search-btn">
+            <i class="fa fa-search"></i>
+          </button>
+        </form>
+      </div>
+    <% end %>
 
     <%= link_to calendar_path, class: "navbar-wagon-item navbar-wagon-link" do %>
       <div id="user_calendar">
