--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -177,6 +177,9 @@
                           </li>
                         </ul>
                       </div>
+                      <div class="card-tag">
+                        <%= user.commission %>%
+                      </div>
                     </div>
                     <hr>
                   <% end %>
