--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -44,6 +44,15 @@ hr {
     line-height: 20px;
   }
 }
+.card-tag {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  border-radius: 4px;
+  background-color: $yellow;
+  color: white;
+  padding: 0 10px;
+}
 .fa-yellow {
   color: $yellow;
 }
