--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,14 +9,14 @@
     <div class="search col-xs-12">
       <form action="/search" class="form-inline text-center">
         <label class="" for="formGroupInputSmall">Je recherche</label>
-        <select class="form-control" placeholder="..." name="has_practice">
+        <select class="search-input select-height" placeholder="..." name="has_practice">
           <option value="false">un remplaçant</option>
           <option value="true">un remplacement</option>
         </select>
         <label for="formGroupInputSmall">à</label>
-        <input type="text" class="form-control" placeholder="Lyon" name="location" id="user_input_autocomplete_address">
+        <input type="text" class="search-input" placeholder="Lyon" name="location" id="user_input_autocomplete_address">
         <label for="formGroupInputSmall">en</label>
-        <select class="form-control" placeholder="Médecine générale" name="speciality">
+        <select class="search-input select-height" placeholder="Médecine générale" name="speciality">
           <option value="Médecine générale">Médecine générale</option>
           <option value="Kinésithérapie">Kinésithérapie</option>
           <option value="Autre spécialité">Autre spécialité</option>
