--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,6 +2,7 @@
   <!-- Logo -->
   <%= link_to root_path, class: "navbar-wagon-brand" do %>
     <%= image_tag "logo-2.png" %>
+    <span id="logo-text">RemplaMatch</span>
   <% end %>
 
   <!-- Right Navigation -->
