Home page changes

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -21,7 +21,7 @@
           <option value="Kinésithérapie">Kinésithérapie</option>
           <option value="Autre spécialité">Autre spécialité</option>
         </select>
-        <input type="submit" value="trouver" class="btn btn-primary">
+        <button type="submit" class="btn btn-primary btn-search-home"><i class="fa fa-search"></i></button>
       </form>
     </div>
   </div>
@@ -36,13 +36,13 @@
         <div class="col-xs-6 col-md-3">
           <div class="card">
             <%= image_tag "calendar2.svg", size: "100", class: "" %>
-            <h5><strong>1.</strong> Déclarer vos disponibilités sur le calendrier intelligent</h5>
+            <h5><strong>1.</strong> Déclarez vos disponibilités sur le calendrier intelligent</h5>
           </div>
         </div>
         <div class="col-xs-6 col-md-3">
           <div class="card">
             <%= image_tag "doctor2.svg", size: "100", class: "" %>
-            <h5><strong>2.</strong> Choisissez le cabinet ou le remplacant qui vous convient</h5>
+            <h5><strong>2.</strong> Choisissez le cabinet ou le remplaçant qui vous convient</h5>
           </div>
         </div>
         <div class="col-xs-6 col-md-3">
@@ -54,7 +54,7 @@
         <div class="col-xs-6 col-md-3">
           <div class="card">
             <%= image_tag "stethoscope2.svg", size: "100", class: "" %>
-            <h5><strong>4.</strong> Donner votre feedback à la fin de la prestation</h5>
+            <h5><strong>4.</strong> Donnez votre feedback à la fin de la prestation</h5>
           </div>
         </div>
       </div>
@@ -65,7 +65,7 @@
 <div class="container">
   <div class="row">
     <div class="text-center">
-      <h3>ils parlent de nous</h3>
+      <h3>Ils parlent de nous :</h3>
       <br>
       <div class="col-xs-6 col-md-4">
         <%= image_tag "jdn.png", class: "img-responsive" %>
@@ -87,28 +87,28 @@
         <%= image_tag 'placeholder_pic.png', class: "avatar-larger" %>
         <h4>Dr Michel Dupont | Paris (15e)</h4>
         <div class="description text-justify">
-          <p>Je suis très heureux de ce service. Je peux désormais rapidement prendre des congés et organiser des weekends de dernières minutes !</p>
+          <p>Je suis très heureux de ce service. Je peux désormais rapidement prendre des congés et organiser des weekends de dernière minute !</p>
         </div>
       </div>
       <div class="carousel-card text-center">
         <%= image_tag 'placeholder_pic.png', class: "avatar-larger" %>
         <h4>Dr Emmanuelle Devis | Paris (07e)</h4>
         <div class="description text-justify">
-          <p>Encore interne à hopital, je recherche activement un cabinet dans lequel je pourrais m'installer. Grâce à Remplarama j'ai pu rencontrer des professionnels de santé dans mon secteur par le biais de remplacement efficaces et rapides !</p>
+          <p>Encore interne à hopital, je recherche activement un cabinet dans lequel je pourrais m'installer. Grâce à RemplaMatch j'ai pu rencontrer des professionnels de santé dans mon secteur par le biais de remplacements efficaces et rapides !</p>
         </div>
       </div>
       <div class="carousel-card text-center">
         <%= image_tag 'placeholder_pic.png', class: "avatar-larger" %>
         <h4>Dr Pierre Petit | Paris (17e)</h4>
         <div class="description text-justify">
-          <p>Super service rapide et efficace !</p>
+          <p>Super service, rapide et efficace !</p>
         </div>
       </div>
       <div class="carousel-card text-center">
         <%= image_tag 'placeholder_pic.png', class: "avatar-larger" %>
         <h4>Dr Interne JB Delis | Paris (04e)</h4>
         <div class="description text-justify">
-          <p>Encore interne dans à hopital, je recherche activement un cabinet dans lequel je pourrais m'installer. Grâce à Remplarama j'ai pu rencontrer des professionnels de santé dans mon secteur par le biais de remplacement efficaces et rapides !</p>
+          <p>Encore interne dans un hopital, je recherche activement un cabinet dans lequel je pourrais m'installer. Grâce à RemplaMatch j'ai pu rencontrer des professionnels de santé dans mon secteur par le biais de remplacements efficaces et rapides !</p>
         </div>
       </div>
     </div>
