--- a/app/assets/stylesheets/layout/_map.scss
+++ b/app/assets/stylesheets/layout/_map.scss
@@ -1,15 +1,17 @@
 #map {
   z-index: 1;
-  position: fixed;
+  position: absolute;
+  top: -16px;
   float: right;
   overflow-y: auto;
-  height: calc(100vh - 70px);
+  height: 100vh;
   width: 100%;
 }
 #map > div > div > div {
   position: fixed;
 }
-.map {
-  position: fixed;
-  right: 0;
+.map-fixed {
+  position: fixed !important;
+  height: 100vh;
+  top: 70px;
 }
