--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -41,3 +41,11 @@
     -webkit-filter: grayscale(1); /* Google Chrome, Safari 6+ & Opera 15+ */
   }
 }
+.btn-search-home {
+  font-size: 25px;
+  padding: 1px 12px;
+}
+.btn-search-home:focus {
+  outline: 0;
+  outline-offset: 0;
+}
