footer added and texts in french

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Remplarama</title>
+    <title>RemplaMatch</title>
     <%= csrf_meta_tags %>
     <%= favicon_link_tag 'favicon.png'%>
 
@@ -23,7 +23,7 @@
 
     <%= yield(:after_js) %>
 
-
+    <%= render 'shared/footer' %>
 
   </body>
 </html>
