--- a/app/assets/stylesheets/layout/_footer.scss
+++ b/app/assets/stylesheets/layout/_footer.scss
@@ -2,17 +2,18 @@
 .main-footer {
     background: #F9F9FA;
     border-top: 1px solid #EAEAEB;
-    height: 150px;
+    height: 30vh;
     padding-top: 50px;
     padding-bottom: 60px;
-    position: absolute;
+    // position: absolute;
     width: 100%;
     bottom: 0;
     color : $gray;
     font-size: 12px;
-    position:fixed;
+    // position:fixed;
     left:0px;
     bottom:0px;
+   bottom:0px;
 }
 
 .social {
