--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -17,7 +17,7 @@
           </div>
 
           <div class="form-actions text-center">
-            <%= f.button :submit, "Sign up", :class => 'btn btn-primary', style: "width: 100%;" %>
+            <%= f.button :submit, "S'inscrire", :class => 'btn btn-primary', style: "width: 100%;" %>
           </div>
 
         <% end %>
