--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,14 +1,14 @@
 <div class="form-actions text-center">
   <%- if controller_name != 'sessions' %>
-    <%= link_to "Log in", new_session_path(resource_name) %><br />
+    <%= link_to "Connexion", new_session_path(resource_name) %><br />
   <% end -%>
   <br>
   <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-    <%= link_to "Sign up", new_registration_path(resource_name), :class => 'btn btn-success', style: "width: 100%;" %><br />
+    <%= link_to "Inscription", new_registration_path(resource_name), :class => 'btn btn-success', style: "width: 100%;" %><br />
   <% end -%>
   <br>
   <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-    <%= link_to "Forgot your password?", new_password_path(resource_name), :class => 'btn btn-medium', style: "width: 100%;" %><br />
+    <%= link_to "Mot de passe oublié?", new_password_path(resource_name), :class => 'btn btn-medium', style: "width: 100%;" %><br />
   <% end -%>
 
   <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
