--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -115,23 +115,37 @@
   </div>
 </div>
 
-
-
-
-<% content_for(:after_js) do %>
-  <%= javascript_tag do %>
-    $(function(){
-      $(".owl-carousel").owlCarousel({
-        items : 2,
-        itemsCustom : false,
-        itemsDesktop : [1199,4],
-        itemsDesktopSmall : [980,3],
-        itemsTablet: [768,2],
-        itemsTabletSmall: false,
-        itemsMobile : [479,1],
-        autoPlay : 3000,
-        stopOnHover : false
+<script type="text/javascript">
+  <% content_for(:after_js) do %>
+    <%= javascript_tag do %>
+      $(function(){
+        $(".owl-carousel").owlCarousel({
+          items : 2,
+          itemsCustom : false,
+          itemsDesktop : [1199,4],
+          itemsDesktopSmall : [980,3],
+          itemsTablet: [768,2],
+          itemsTabletSmall: false,
+          itemsMobile : [479,1],
+          autoPlay : 3000,
+          stopOnHover : false
+        });
       });
-    });
+    <% end %>
   <% end %>
-<% end %>
+</script>
+<!-- Other Footer if interested !
+<div class="wrapper-footer">
+  <div class="icon-link">
+    <ul class="list-inline list-unstyled">
+      <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+      <li><a href="#"><i class="fa fa-facebook-square"></i></a></li>
+      <li><a href="#"><i class="fa fa-linkedin-square"></i></a></li>
+      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+    </ul>
+  </div>
+  <div class="made-with">
+    <h6>Made with <i class="fa fa-heart footer-hover"></i> and hard <i class="fa fa-hand-spock-o footer-hover"></i> - 2016 RemplaMatch</h6>
+  </div>
+</div>
+ -->
