--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
 
     <%= yield(:after_js) %>
 
-    <%= render 'shared/footer' %>
+    <%= render 'shared/footer' unless @disable_footer %>
 
   </body>
 </html>
